# DexRay

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml
cli/: main.py
config/: settings.py
core/: analysis_engine.py  models.py
reports/: __init__.py  base.py  html_report.py  json_report.py  pdf_report.py
scanner/modules/: __init__.py  apk_signer_scanner.py  asset_scanner.py  build_config_scanner.py  certificate_scanner.py  debug_tools_scanner.py  deep_link_scanner.py  env_scanner.py  firebase_scanner.py  manifest_scanner.py  native_scanner.py  network_config_scanner.py  permission_audit_scanner.py  secret_scanner.py  security_checker.py  strings_scanner.py  tracking_scanner.py  url_scanner.py
scanner/plugins/: __init__.py
tests/: test_analysis_engine.py  test_firebase_scanner.py  test_manifest_scanner.py  test_models.py  test_reports.py  test_secret_scanner.py  test_security_checks.py  test_url_scanner.py
web/: main.py
web/templates/: dashboard.html  scan_detail.html
