[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dexray"
version = "1.0.0"
description = "Static security analysis of Android APK files with comprehensive vulnerability assessment"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["android", "security", "apk", "static-analysis", "owasp"]

authors = [
    {name = "DexRay Team"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "lxml>=4.9.3",
    "cryptography>=41.0.7",
    "Pillow>=10.1.0",
    "reportlab>=4.0.8",
    "defusedxml>=0.7.1",
    "orjson>=3.9.10",
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "tabulate>=0.9.0",
    "markdown>=3.5.1",
    "watchfiles>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["config*", "core*", "scanner*", "reports*", "cli*", "web*"]

[project.scripts]
dexray = "cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
